--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,8 @@
-h2mem1 = {
-  url = "jdbc:h2:mem:huodong"
-  driver = org.h2.Driver
+mysql1 = {
+  url = "jdbc:mysql://localhost:3306/huodong"
+  driver = "com.mysql.jdbc.Driver"
   connectionPool = disabled
   keepAliveConnection = true
+  db.default.logSql=true
 }
+logger.scala.slick=DEBUG
